<?xml version="1.0"?>
<package format="2">
  <name>robot_motion_model</name>
  <version>0.1.0</version>
  <description>A package demonstrating different motion models of a mobile robot</description>
  <maintainer email="fanxiule@gmail.com">Xiule Fan</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>

</package>
