<?xml version="1.0"?>
<package format="2">
  <name>robot_sensor_model</name>
  <version>0.1.0</version>
  <description>A package demonstrating different models for sensors commonly used on mobile robots</description>
  <maintainer email="fanxiule@gmail.com">Xiule Fan</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libpcl-all</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>